# Road-Extraction

./: .gitignore  Exploration.ipynb  README.md  pyproject.toml
images/: Strasbourg_georef.tif  Test_image_georef.tif
maps/: Strasbourg.html  maps_method_1.html  maps_method_2.html
src/: dataset.py  model.py
