[project]
name = "road-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "rasterio>=1.4.4",
    "scikit-image>=0.26.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
